asco: display update frequency and dim when updates stop. run slower updates on tablets and phones
Ignore-this: 2439d0f540c9eae00c4f18e26411c100

darcs-hash:20130612234712-312f9-97b08b71251395f6b8a254565f01f005f4ba5fa1

--- a/static/style.css
+++ b/static/style.css
@@ -56,3 +56,6 @@ body {
 .timeRow {
     margin: 14px;
 }
+.stalled {
+    opacity: .5;
+}
